[button] Fix (Desktop modal) : remove upper white space from modal on scrolling

--- a/packages/plugin-button/statics/styles/button-input-modal.scss
+++ b/packages/plugin-button/statics/styles/button-input-modal.scss
@@ -120,7 +120,7 @@
   height: calc(100vh - 232px);
   overflow: hidden;
   box-sizing: border-box;
-  padding: 18px 30px 0px;
+  padding: 0px 30px 0px;
   padding-right: 0px;
 }
 
