--- a/packages/plugin-button/statics/styles/design-component-styles.scss
+++ b/packages/plugin-button/statics/styles/design-component-styles.scss
@@ -70,7 +70,7 @@
 
 .button_samples {
   border-bottom: 1px solid #ededed;
-  padding-top: 7px;
+  padding-top: 25px;
   padding-bottom: 6px;
   @include phone {
     width: 100%;
