--- a/packages/plugin-button/statics/styles/settings-component-styles.scss
+++ b/packages/plugin-button/statics/styles/settings-component-styles.scss
@@ -63,7 +63,7 @@
 }
 .section_content {
   padding-right: 30px;
-  padding-top: 3px;
+  padding-top: 21px;
   input[type="text"] {
     border-radius: 0px;
   }
